# state-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  derivation.nix  flake.nix  stops.json  test.py
.github/workflows/: dvb-api.yml
nixos-module/: default.nix
proto/: telegram.proto
src/: main.rs  structs.rs
src/api/: endpoints.rs  mod.rs
src/api/endpoints/: mod.rs  static.rs
src/connection/: mod.rs
src/state/: graph.rs  mod.rs
src/telegram/: mod.rs
