[package]
name = "dvb-api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dump-dvb = { version = "0.2", git = "https://github.com/dump-dvb/dump-dvb.rs" }
stop-names = { version = "0.6", git = "https://github.com/dump-dvb/stop-names" }

tonic = "0.7"
prost = "0.10"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

actix-web = "*"
actix-rt = "*"
actix-multipart = "0.4.0"
actix-cors = "0.6.0-beta.4"

async-std = "*"
asynchronous-codec = "0.6"
tokio-util = { version = "0.7", features=["compat"] }
futures = "0.3"
futures-io = "0.3"
futures-util = "*"

[build-dependencies]
tonic-build = "0.7"
