[package]
name = "dvb-api"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dump-dvb = { version = "0.5", git = "https://github.com/dump-dvb/dump-dvb.rs" }

tonic = "0.7"
prost = "0.10"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

actix-web = "*"
actix-rt = "*"
actix-cors = "*"

async-std = "*"
asynchronous-codec = "*"
tokio-util = { version = "*", features=["compat"] }
futures = "*"
futures-io = "*"
futures-util = "*"
log = "*"
chrono = "*"
utoipa = "*"
env_logger = "*"

[build-dependencies]
tonic-build = "0.7"
