[package]
name = "state-api"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlms = { version = "0.7", git = "https://github.com/tlm-solutions/tlms.rs", features = ["locations", "telegrams"] }

tonic = "0.7"
prost = "0.10"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

actix-web = "*"
actix-rt = "*"
actix-cors = "*"
actix-web-prom = "0.6"

async-std = "*"
asynchronous-codec = "*"
tokio-util = { version = "*", features=["compat"] }
futures = "*"
futures-io = "*"
futures-util = "*"
log = "*"
chrono = "*"
utoipa = "*"
env_logger = "*"

[build-dependencies]
tonic-build = "0.7"
